--- a/EnemyLosses/Views/Base.lproj/Main.storyboard
+++ b/EnemyLosses/Views/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNI-rx-lZr">
-                                <rect key="frame" x="16" y="418" width="343" height="90"/>
+                                <rect key="frame" x="16" y="468" width="343" height="90"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="mRo-HM-Jie"/>
+                                    <constraint firstAttribute="height" constant="90" id="hB9-A7-eRV"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -36,10 +36,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Af0-AE-Q5i">
-                                <rect key="frame" x="16" y="236" width="343" height="90"/>
+                                <rect key="frame" x="16" y="206" width="343" height="90"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="Ics-Y2-2mP"/>
+                                    <constraint firstAttribute="height" constant="90" id="hGQ-6r-ncy"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -55,17 +55,16 @@
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="NNI-rx-lZr" firstAttribute="top" secondItem="Af0-AE-Q5i" secondAttribute="bottom" constant="92" id="49y-iQ-p7t"/>
-                            <constraint firstItem="Xwa-fx-zJm" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="NNI-rx-lZr" secondAttribute="bottom" constant="250" id="BSi-Ao-oN3"/>
-                            <constraint firstItem="Af0-AE-Q5i" firstAttribute="top" relation="lessThanOrEqual" secondItem="Xwa-fx-zJm" secondAttribute="top" constant="180" id="Bvw-Xe-mQc"/>
+                            <constraint firstItem="Af0-AE-Q5i" firstAttribute="top" secondItem="Xwa-fx-zJm" secondAttribute="top" constant="150" id="9Wj-Hq-8ai"/>
+                            <constraint firstItem="Xwa-fx-zJm" firstAttribute="bottom" secondItem="NNI-rx-lZr" secondAttribute="bottom" constant="200" id="ML0-Ha-zpr"/>
                             <constraint firstAttribute="bottom" secondItem="DOs-PG-Odz" secondAttribute="bottom" id="Od2-iF-dVk"/>
                             <constraint firstItem="DOs-PG-Odz" firstAttribute="trailing" secondItem="Xwa-fx-zJm" secondAttribute="trailing" id="R6q-T9-7cd"/>
                             <constraint firstItem="DOs-PG-Odz" firstAttribute="leading" secondItem="Xwa-fx-zJm" secondAttribute="leading" id="W8i-ak-gIh"/>
-                            <constraint firstItem="NNI-rx-lZr" firstAttribute="leading" secondItem="Xwa-fx-zJm" secondAttribute="leading" constant="16" id="auw-W6-VgG"/>
-                            <constraint firstItem="Af0-AE-Q5i" firstAttribute="leading" secondItem="Xwa-fx-zJm" secondAttribute="leading" constant="16" id="i9M-tD-W5e"/>
+                            <constraint firstItem="Xwa-fx-zJm" firstAttribute="trailing" secondItem="Af0-AE-Q5i" secondAttribute="trailing" constant="16" id="WpB-JC-6Gx"/>
+                            <constraint firstItem="NNI-rx-lZr" firstAttribute="leading" secondItem="Xwa-fx-zJm" secondAttribute="leading" constant="16" id="acs-z6-IAr"/>
+                            <constraint firstItem="Xwa-fx-zJm" firstAttribute="trailing" secondItem="NNI-rx-lZr" secondAttribute="trailing" constant="16" id="d1o-fr-6MB"/>
                             <constraint firstItem="DOs-PG-Odz" firstAttribute="top" secondItem="QcX-Q0-ynv" secondAttribute="top" id="pfY-98-fVa"/>
-                            <constraint firstItem="Xwa-fx-zJm" firstAttribute="trailing" secondItem="NNI-rx-lZr" secondAttribute="trailing" constant="16" id="uVk-VK-7i2"/>
-                            <constraint firstItem="Xwa-fx-zJm" firstAttribute="trailing" secondItem="Af0-AE-Q5i" secondAttribute="trailing" constant="16" id="wjt-e6-BEj"/>
+                            <constraint firstItem="Af0-AE-Q5i" firstAttribute="leading" secondItem="Xwa-fx-zJm" secondAttribute="leading" constant="16" id="xPi-nS-XIf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="VlU-aN-qhq">
@@ -151,7 +150,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Yqn-c5-Gy1">
-                                <rect key="frame" x="16" y="146" width="343" height="582"/>
+                                <rect key="frame" x="16" y="275.66666666666674" width="343" height="452.33333333333326"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -166,13 +165,13 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="343" height="45"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5J7-VJ-m5O">
-                                                            <rect key="frame" x="227.33333333333334" y="0.0" width="75.666666666666657" height="45"/>
+                                                            <rect key="frame" x="227" y="0.0" width="76" height="45"/>
                                                             <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gz8-33-DI8">
-                                                            <rect key="frame" x="40" y="0.0" width="42.333333333333343" height="45"/>
+                                                            <rect key="frame" x="40" y="0.0" width="42.666666666666657" height="45"/>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -206,38 +205,45 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1d-Tu-a0o">
-                                <rect key="frame" x="16" y="86" width="343" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="BtC-Q0-Cou"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q1d-Tu-a0o">
+                                <rect key="frame" x="16" y="243" width="343" height="22.666666666666686"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lEn-lu-Woy">
+                                <rect key="frame" x="60" y="56" width="255" height="188"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="188" id="8rU-Dn-ETH"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Zve-qX-aRj"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
+                            <constraint firstItem="Q1d-Tu-a0o" firstAttribute="leading" secondItem="Zve-qX-aRj" secondAttribute="leading" constant="16" id="3H0-mO-kVq"/>
+                            <constraint firstItem="Zve-qX-aRj" firstAttribute="trailing" secondItem="Q1d-Tu-a0o" secondAttribute="trailing" constant="16" id="422-Cy-dCU"/>
                             <constraint firstItem="Vu6-bg-zyO" firstAttribute="leading" secondItem="Zve-qX-aRj" secondAttribute="leading" id="4MV-FU-qk0"/>
-                            <constraint firstItem="Zve-qX-aRj" firstAttribute="trailing" secondItem="Q1d-Tu-a0o" secondAttribute="trailing" constant="16" id="6wk-U3-MNA"/>
                             <constraint firstItem="Vu6-bg-zyO" firstAttribute="top" secondItem="Ob9-28-AUJ" secondAttribute="top" id="8U6-Iw-t2I"/>
                             <constraint firstAttribute="trailing" secondItem="Vu6-bg-zyO" secondAttribute="trailing" id="JGD-9o-gNn"/>
-                            <constraint firstItem="Yqn-c5-Gy1" firstAttribute="leading" secondItem="Zve-qX-aRj" secondAttribute="leading" constant="16" id="JGx-9H-6C0"/>
                             <constraint firstAttribute="bottom" secondItem="Vu6-bg-zyO" secondAttribute="bottom" id="LG2-w7-H4s"/>
-                            <constraint firstItem="Zve-qX-aRj" firstAttribute="trailing" secondItem="Yqn-c5-Gy1" secondAttribute="trailing" constant="16" id="MQu-19-zbO"/>
-                            <constraint firstItem="Yqn-c5-Gy1" firstAttribute="top" secondItem="Q1d-Tu-a0o" secondAttribute="bottom" constant="20" id="Z7P-G6-jW1"/>
-                            <constraint firstItem="Zve-qX-aRj" firstAttribute="bottom" secondItem="Yqn-c5-Gy1" secondAttribute="bottom" constant="30" id="aWL-nf-TLA"/>
-                            <constraint firstItem="Q1d-Tu-a0o" firstAttribute="leading" secondItem="Zve-qX-aRj" secondAttribute="leading" constant="16" id="jPG-Ic-H0V"/>
+                            <constraint firstItem="Yqn-c5-Gy1" firstAttribute="top" secondItem="Q1d-Tu-a0o" secondAttribute="bottom" constant="10" id="XNp-du-o7b"/>
+                            <constraint firstItem="Q1d-Tu-a0o" firstAttribute="top" secondItem="lEn-lu-Woy" secondAttribute="bottom" constant="-1" id="bc2-Ba-MUX"/>
+                            <constraint firstItem="Yqn-c5-Gy1" firstAttribute="leading" secondItem="Zve-qX-aRj" secondAttribute="leading" constant="16" id="cE1-EI-xps"/>
+                            <constraint firstItem="Zve-qX-aRj" firstAttribute="trailing" secondItem="lEn-lu-Woy" secondAttribute="trailing" constant="60" id="eda-VM-4Xr"/>
+                            <constraint firstItem="lEn-lu-Woy" firstAttribute="top" secondItem="Zve-qX-aRj" secondAttribute="top" id="g9A-Bc-fVH"/>
+                            <constraint firstItem="Zve-qX-aRj" firstAttribute="bottom" secondItem="Yqn-c5-Gy1" secondAttribute="bottom" constant="30" id="jlu-c5-AHO"/>
+                            <constraint firstItem="Zve-qX-aRj" firstAttribute="trailing" secondItem="Yqn-c5-Gy1" secondAttribute="trailing" constant="16" id="oSc-cu-pTL"/>
                             <constraint firstItem="Vu6-bg-zyO" firstAttribute="top" secondItem="Ob9-28-AUJ" secondAttribute="top" id="qGZ-tt-2Fg"/>
                             <constraint firstItem="Vu6-bg-zyO" firstAttribute="trailing" secondItem="Zve-qX-aRj" secondAttribute="trailing" id="u1e-CV-BwD"/>
                             <constraint firstItem="Vu6-bg-zyO" firstAttribute="leading" secondItem="Ob9-28-AUJ" secondAttribute="leading" id="ujC-LQ-6gP"/>
+                            <constraint firstItem="lEn-lu-Woy" firstAttribute="leading" secondItem="Zve-qX-aRj" secondAttribute="leading" constant="60" id="vNO-ON-3cI"/>
                             <constraint firstItem="Vu6-bg-zyO" firstAttribute="bottom" secondItem="Zve-qX-aRj" secondAttribute="bottom" id="vu7-cz-UQ3"/>
-                            <constraint firstItem="Q1d-Tu-a0o" firstAttribute="top" secondItem="Zve-qX-aRj" secondAttribute="top" constant="30" id="w9f-19-aJi"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="VcX-YL-Ld1"/>
                     <connections>
+                        <outlet property="image" destination="lEn-lu-Woy" id="GEM-Qh-s0R"/>
                         <outlet property="label" destination="Q1d-Tu-a0o" id="vaz-dC-rag"/>
                         <outlet property="tableView" destination="Yqn-c5-Gy1" id="cL5-oC-wal"/>
                     </connections>
